[tool.poetry]
name = "flangoberry"
version = "0.1.0"
description = "Flask + ArangoDB + Strawberry GraphQL"
authors = ["Irfan Baig <riverfr0zen@elitemail.org>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.2"
python-arango = "^7.5.7"
Flask = "^2.3.2"
strawberry-graphql = "^0.177.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.5"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
black = "^23.3.0"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
